# dac-toolkit

./: .gitattributes  .gitignore  .markdownlint.json  .vale-bootstrap.ini  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  devfile.yaml
.devcontainer/: Dockerfile  Dockerfile.devspaces  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: docker-build.yml
diagrams/: mermaid-theme.css
docx_builder/: pyproject.toml  requirements.txt
docx_builder/examples/: sample_input.md
docx_builder/src/docx_builder/: __init__.py  batch_cli.py  batch_config.py  batch_index.py  batch_output.py  batch_report.py  batch_scanner.py  builder.py  cli.py  constants.py  cover_page.py  diagrams.py  markdown_parser.py  metadata.py  revision_history.py  sections.py  styles.py  toc.py  xml_helpers.py
docx_builder/tests/: test_metadata.py
examples/: org.yaml
scripts/: build-docs.sh  render-diagrams.sh  vale-bootstrap.sh
templates/: template_adr.md  template_architecture-overview.md  template_automation-discovery.md  template_automation-request.md  template_automation-spec.md  template_checklist.md  template_guide.md  template_meeting-notes.md  template_pattern.md  template_policy.md  template_proposal.md  template_rca.md  template_reference-sheet.md  template_release-notes.md  template_runbook.md  template_sad.md  template_standard.md
templates/adr/: template_adr.md
templates/architecture-docs/: template_architecture-doc.md  template_gap-analysis.md
templates/meeting-notes/: template_meeting-notes.md
vale/: README.md
(+12 files in other folders)
